Switching to https protocol for hath depedencency

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lodash": "^4.15.0"
   },
   "devDependencies": {
-    "hath": "git+ssh://git@github.com/stringtree/hath.git",
+    "hath": "git+https://github.com/stringtree/hath.git",
     "eslint": "^0.23.0",
     "eslint-config-imperative": "0.0.6",
     "eslint-plugin-imperative": "0.0.2",
