--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "marv",
   "version": "0.2.1",
-  "description": "A programatic database migration tool with plugable drivers",
+  "description": "A programmatic database migration tool with plugable drivers",
   "main": "index.js",
   "scripts": {
     "test": "node test/suite.js",
