--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "async": "^2.0.1",
     "debug": "^2.2.0",
-    "lodash": "^4.15.0"
+    "lodash": "^4.15.0",
+    "xregexp": "^3.1.1"
   },
   "devDependencies": {
     "eslint": "^0.23.0",
