--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "async": "^2.0.1",
     "debug": "^2.2.0",
+    "hath": "^1.0.0",
+    "hath-assert": "^0.1.0",
     "lodash": "^4.15.0",
     "xregexp": "^3.1.1"
   },
