--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,8 +1,6 @@
 engines:
   eslint:
-    enabled: true
-    config:
-      config: .eslintrc
+    enabled: false
   duplication:
     enabled: true
     config:
