--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   },
   "devDependencies": {
     "codeclimate-test-reporter": "^0.4.0",
-    "eslint": "^0.23.0",
-    "eslint-config-imperative": "0.0.6",
-    "eslint-plugin-imperative": "0.0.2",
+    "eslint": "^3.12.2",
+    "eslint-config-imperative": "^1.0.0",
+    "eslint-plugin-imperative": "^1.0.0",
     "hath": "^1.0.1",
     "hath-assert": "^0.2.0",
-    "husky": "^0.11.4",
+    "husky": "^0.12.0",
     "istanbul": "^0.4.5"
   },
   "keywords": [
