--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "node test/suite.js",
     "lint": "eslint .",
     "istanbul": "istanbul cover --report html --report lcov test/suite.js",
-    "codeclimate": "npm run istanbul && source .codeclimate && codeclimate-test-reporter < coverage/lcov.info",
-    "prepush": "npm run lint && npm run codeclimate"
+    "codeclimate": "(test -e .codeclimate && npm run istanbul && source .codeclimate && codeclimate-test-reporter < coverage/lcov.info) || echo skipping codeclimate",
+    "prepush": "npm run lint && npm test && npm run codeclimate"
   },
   "author": "GuideSmiths Ltd",
   "license": "ISC",
