--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,3 +1,4 @@
+version: "2"
 engines:
   eslint:
     enabled: false
@@ -6,6 +7,15 @@ engines:
     config:
       languages:
       - javascript
+checks:
+  method-complexity:
+    enabled: false
+  similar-code:
+    config:
+      threshold: 5
+  identical-code:
+    config:
+      threshold: 5
 
 ratings:
   paths:
