--- a/package.json
+++ b/package.json
@@ -7,20 +7,19 @@
     "test": "node test/suite.js",
     "lint": "eslint .",
     "istanbul": "istanbul cover --report html --report lcov test/suite.js",
-    "codeclimate": "(test -e .codeclimate && npm run istanbul && source .codeclimate && codeclimate-test-reporter < coverage/lcov.info) || echo skipping codeclimate",
+    "codeclimate": "(test -e .codeclimate && npm run istanbul && source .codeclimate) || echo skipping codeclimate",
     "prepush": "npm run lint && npm test && npm run codeclimate"
   },
   "author": "GuideSmiths Ltd",
   "license": "ISC",
   "dependencies": {
-    "async": "^2.5.0",
+    "async": "^2.6.0",
     "debug": "^3.1.0",
-    "lodash": "^4.17.4",
-    "xregexp": "^4.0.0"
+    "xregexp": "^4.0.0",
+    "xregexp": "^3.2.0"
   },
   "devDependencies": {
-    "codeclimate-test-reporter": "^0.5.0",
-    "eslint": "^4.2.0",
+    "eslint": "^4.19.1",
     "eslint-config-imperative": "^2.0.1",
     "eslint-plugin-imperative": "^2.0.0",
     "hath": "^1.0.1",
