--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "async": "^2.6.0",
     "debug": "^3.1.0",
+    "lodash": "^4.17.10",
     "xregexp": "^4.1.1"
   },
   "devDependencies": {
