--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "xregexp": "^4.1.1"
   },
   "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-config-imperative": "^2.0.1",
-    "eslint-plugin-imperative": "^2.0.0",
+    "eslint": "^5.5.0",
+    "eslint-config-imperative": "^2.1.0",
+    "eslint-plugin-imperative": "^2.1.0",
     "hath": "^1.0.1",
     "hath-assert": "^0.2.0",
     "husky": "^0.14.3",
@@ -39,6 +39,9 @@
   ],
   "directories": {
     "test": "test"
+  },
+  "engines": {
+    "node": ">6.0.0"
   },
   "repository": {
     "type": "git",
