--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,8 @@
 {
-  "extends": "imperative"
+  "extends": "imperative",
+  "rules": {
+    "comma-dangle": ["error", "only-multiline"],
+    "indent": ["error", 2],
+    "semi": ["error", "always"],
+  }
 }
