--- a/package.json
+++ b/package.json
@@ -6,26 +6,26 @@
   "scripts": {
     "test": "node test/suite.js",
     "lint": "eslint .",
-    "istanbul": "istanbul cover --report html --report lcov test/suite.js",
-    "codeclimate": "(test -e .codeclimate && npm run istanbul && source .codeclimate) || echo skipping codeclimate",
-    "prepush": "npm run lint && npm test && npm run codeclimate"
+    "coverage": "nyc --report html --reporter lcov --reporter text-summary node test/suite.js",
+    "codeclimate": "(test -e .codeclimate && npm run coverage && source .codeclimate) || echo skipping codeclimate",
+    "prepush": "npm run lint && npm run codeclimate"
   },
   "author": "GuideSmiths Ltd",
   "license": "ISC",
   "dependencies": {
-    "async": "^2.6.0",
-    "debug": "^4.0.0",
-    "lodash": "^4.17.10",
-    "xregexp": "^4.1.1"
+    "async": "^2.6.2",
+    "debug": "^4.1.1",
+    "lodash": "^4.17.11",
+    "xregexp": "^4.2.4"
   },
   "devDependencies": {
-    "eslint": "^5.5.0",
+    "eslint": "^5.16.0",
     "eslint-config-imperative": "^2.1.0",
     "eslint-plugin-imperative": "^2.1.0",
     "hath": "^1.0.1",
     "hath-assert": "^0.2.0",
-    "husky": "^0.14.3",
-    "istanbul": "^0.4.5"
+    "husky": "^1.3.1",
+    "nyc": "^13.3.0"
   },
   "keywords": [
     "marv",
