--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "postgresql",
     "mysql",
     "sqlite",
-    "sqlite3"
+    "sqlite3",
+    "mssql"
   ],
   "directories": {
     "test": "test"
