--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "marv",
   "version": "2.3.1",
-  "description": "A programmatic database migration tool with plugable drivers for mysql, sqlite and postgres",
+  "description": "A programmatic database migration tool with plugable drivers for mysql, postgres, mssql and sqlite",
   "main": "index.js",
   "scripts": {
     "test": "node test/suite.js",
