--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "async": "^3.1.0",
     "debug": "^4.1.1",
     "lodash": "^4.17.15",
+    "util.promisify": "^1.0.0",
     "xregexp": "^4.2.4"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
-    "eslint-config-imperative": "^2.1.0",
-    "eslint-plugin-imperative": "^2.1.0",
+    "eslint-config-imperative": "^3.0.0",
+    "eslint-plugin-imperative": "^3.0.0",
     "hath": "^1.0.1",
     "hath-assert": "^0.2.0",
+    "hath-report-spec": "^0.1.0",
     "husky": "^3.0.2",
     "nyc": "^14.1.1"
   },
