--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "marv",
   "version": "2.4.0",
-  "description": "A programmatic database migration tool with plugable drivers for mysql, postgres, mssql and sqlite",
+  "description": "A programmatic database migration tool with plugable drivers for mysql, postgres, mssql, sqlite and oracle",
   "main": "index.js",
   "scripts": {
     "test": "node test/suite.js",
@@ -39,7 +39,11 @@
     "mysql",
     "sqlite",
     "sqlite3",
-    "mssql"
+    "mssql",
+    "sql server",
+    "microsoft sql server",
+    "oracle",
+    "oracledb"
   ],
   "directories": {
     "test": "test"
