--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "A programmatic database migration tool with plugable drivers for mysql, postgres, mssql, sqlite and oracle",
   "main": "index.js",
   "scripts": {
-    "test": "node test/suite.js",
+    "test": "nyc --report html --reporter lcov --reporter text-summary node test/suite.js",
     "lint": "eslint .",
-    "coverage": "nyc --report html --reporter lcov --reporter text-summary node test/suite.js",
-    "codeclimate": "(test -e .codeclimate && npm run coverage && source .codeclimate && codeclimate-test-reporter < coverage/lcov.info) || echo skipping codeclimate"
+    "codeclimate": "codeclimate-test-reporter < coverage/lcov.info"
   },
   "author": "GuideSmiths Ltd",
   "license": "ISC",
@@ -61,7 +60,7 @@
   "homepage": "https://guidesmiths.github.io/marv/",
   "husky": {
     "hooks": {
-      "pre-push": "npm run lint && npm run codeclimate"
+      "pre-commit": "npm run lint && npm run test"
     }
   }
 }
