--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,20 @@ before_install:
 before_script: greenkeeper-lockfile-update
 after_script: greenkeeper-lockfile-upload
 
+script:
+  - npm run lint
+  - npm run test
+
+before_deploy: npm run codeclimate
+
+deploy:
+  provider: script
+  script: echo 'placeholder'
+  on:
+    tags: true
+
 node_js:
   - "8"
   - "10"
   - "12"
 
-jobs:
-  include:
-    - stage: codeclimate
-      script: npm run codeclimate
