--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "nyc --report html --reporter lcov --reporter text-summary node test/suite.js",
     "lint": "eslint .",
+    "ci": "npm run lint && npm run test",
     "codeclimate": "codeclimate-test-reporter < coverage/lcov.info"
   },
   "author": "GuideSmiths Ltd",
