Replace hath with zUnit

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "qa": "npm run lint && npm run test",
     "lint": "eslint .",
-    "test": "nyc --report html --reporter lcov --reporter text-summary node test/suite.js"
+    "test": "nyc --report html --reporter lcov --reporter text-summary node test/suite.js",
+    "test2": "zUnit"
   },
   "author": "GuideSmiths Ltd",
   "license": "ISC",
@@ -21,11 +22,9 @@
     "eslint": "^6.8.0",
     "eslint-config-imperative": "^3.0.0",
     "eslint-plugin-imperative": "^3.0.0",
-    "hath": "^1.0.1",
-    "hath-assert": "^0.2.0",
-    "hath-report-spec": "^0.1.0",
     "husky": "^4.2.3",
-    "nyc": "^15.0.1"
+    "nyc": "^15.0.1",
+    "zunit": "^3.2.1"
   },
   "keywords": [
     "marv",
@@ -62,5 +61,8 @@
     "hooks": {
       "pre-commit": "npm run qa"
     }
+  },
+  "zUnit": {
+    "pollute": true
   }
 }
