--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "async": "^3.2.0",
     "debug": "^4.3.1",
     "lodash": "^4.17.21",
-    "util.promisify": "^1.0.0",
     "xregexp": "^5.0.2"
   },
   "devDependencies": {
@@ -46,7 +45,7 @@
     "test": "test"
   },
   "engines": {
-    "node": ">6.0.0"
+    "node": ">=10.0.0"
   },
   "repository": {
     "type": "git",
