--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "qa": "npm run lint && npm run test",
     "lint": "eslint .",
     "test": "nyc --report html --reporter lcov --reporter text-summary zUnit",
+    "coverage": "nyc --report html --reporter lcov --reporter text-summary zUnit",
     "prepare": "husky install"
   },
   "author": "GuideSmiths Ltd",
