--- a/.github/workflows/node-js-publish.yml
+++ b/.github/workflows/node-js-publish.yml
@@ -14,6 +14,7 @@ jobs:
           node-version: '16.x'
       - run: npm ci
       - run: npm run lint
+      - run: npm run prettier
       - run: npm test
 
   publish-npm:
