Fix build (maybe)

--- a/.github/workflows/node-js-ci.yml
+++ b/.github/workflows/node-js-ci.yml
@@ -14,6 +14,10 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
+      - run: npm ci
+        working-directory: ./examples/async
+      - run: npm ci
+        working-directory: ./examples/callback
       - run: npm run lint
       - run: npm run prettier
       - run: npm test
