--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,9 +4,10 @@
     "node": true
   },
   "parserOptions": {
-    "ecmaVersion": "2017"
+    "ecmaVersion": "2019"
   },
   "rules": {
+    "arrow-body-style": 0,
     "consistent-return": 0,
     "global-require": 0,
     "prefer-destructuring": 0,
