--- a/.github/workflows/node-js-publish.yml
+++ b/.github/workflows/node-js-publish.yml
@@ -13,6 +13,10 @@ jobs:
         with:
           node-version: '16.x'
       - run: npm ci
+      - run: npm ci
+        working-directory: ./examples/async
+      - run: npm ci
+        working-directory: ./examples/callback
       - run: npm run lint
       - run: npm run prettier
       - run: npm test
