--- a/.github/workflows/node-js-publish.yml
+++ b/.github/workflows/node-js-publish.yml
@@ -12,10 +12,10 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '16.x'
-      - run: npm ci
-      - run: npm ci
+      - run: npm i
+      - run: npm i
         working-directory: ./examples/async
-      - run: npm ci
+      - run: npm i
         working-directory: ./examples/callback
       - run: npm run lint
       - run: npm run prettier
@@ -30,7 +30,7 @@ jobs:
         with:
           node-version: '16.x'
           registry-url: https://registry.npmjs.org/
-      - run: npm ci
+      - run: npm i
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_GUIDESMITHS }}
